--- a/src/index.css
+++ b/src/index.css
@@ -23,25 +23,6 @@ html {
   --primary-700: #1d4ed8;
   --primary-800: #1e40af;
   --primary-900: #1e3a8a;
-
-  /* grey */
-  --grey-50: #f0f4f8;
-  --grey-100: #d9e2ec;
-  --grey-200: #bcccdc;
-  --grey-300: #9fb3c8;
-  --grey-400: #829ab1;
-  --grey-500: #627d98;
-  --grey-600: #486581;
-  --grey-700: #334e68;
-  --grey-800: #243b53;
-  --grey-900: #102a43;
-  /* rest of the colors */
-  --black: #222;
-  --white: #fff;
-  --red-light: #f8d7da;
-  --red-dark: #842029;
-  --green-light: #d1e7dd;
-  --green-dark: #0f5132;
   --clr-primary-1: hsl(205, 86%, 17%);
   --clr-primary-2: hsl(205, 77%, 27%);
   --clr-primary-3: hsl(205, 72%, 37%);
@@ -72,6 +53,25 @@ html {
   --clr-green-dark: hsl(125, 67%, 44%);
   --clr-green-light: hsl(125, 71%, 66%);
 
+  /* grey */
+  --grey-50: #f0f4f8;
+  --grey-100: #d9e2ec;
+  --grey-200: #bcccdc;
+  --grey-300: #9fb3c8;
+  --grey-400: #829ab1;
+  --grey-500: #627d98;
+  --grey-600: #486581;
+  --grey-700: #334e68;
+  --grey-800: #243b53;
+  --grey-900: #102a43;
+  /* rest of the colors */
+  --black: #222;
+  --white: #fff;
+  --red-light: #f8d7da;
+  --red-dark: #842029;
+  --green-light: #d1e7dd;
+  --green-dark: #0f5132;
+
   /* fonts  */
   --headingFont: 'Roboto Condensed', Sans-Serif;
   --bodyFont: 'Cabin', Sans-Serif;
@@ -81,6 +81,7 @@ html {
   --backgroundColor: var(--grey-50);
   --textColor: var(--grey-900);
   --borderRadius: 0.25rem;
+  --borderRadiusRound: 50%;
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
   --max-width: 1120px;
@@ -160,6 +161,10 @@ small,
   font-size: var(--small-text);
 }
 
+.mt {
+  margin-top: 1.5rem;
+}
+
 a {
   text-decoration: none;
   letter-spacing: var(--letterSpacing);
@@ -229,25 +234,15 @@ ul {
   background: var(--red-dark);
   color: var(--white);
 }
-/* alerts */
-.alert {
-  padding: 0.375rem 0.75rem;
-  margin-bottom: 1rem;
-  border-color: transparent;
-  border-radius: var(--borderRadius);
-  text-align: center;
-  letter-spacing: var(--letterSpacing);
-  text-transform: capitalize;
+
+.btn-transparent {
+  background-color: transparent;
+  color: var(--red-dark);
+  font-size: x-large;
+  box-shadow: none;
+  padding: 0.375rem 0.5rem 0;
 }
 
-.alert-danger {
-  color: var(--red-dark);
-  background: var(--red-light);
-}
-.alert-success {
-  color: var(--green-dark);
-  background: var(--green-light);
-}
 /* form */
 
 .form {
@@ -300,25 +295,7 @@ ul {
   letter-spacing: var(--letterSpacing);
   text-transform: capitalize;
 }
-/* alert */
 
-@keyframes spinner {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.loading {
-  width: 6rem;
-  height: 6rem;
-  border: 5px solid var(--grey-400);
-  border-radius: 50%;
-  border-top-color: var(--red-dark);
-  animation: spinner 2s linear infinite;
-}
-.loading-center {
-  margin: 0 auto;
-}
 /* title */
 
 .title {
@@ -333,26 +310,8 @@ ul {
   margin-top: -1rem;
 }
 
-.container {
-  width: var(--fluid-width);
-  max-width: var(--max-width);
-  margin: 0 auto;
-}
 .full-page {
   min-height: 100vh;
-}
-
-.coffee-info {
-  text-align: center;
-  text-transform: capitalize;
-  margin-bottom: 1rem;
-  letter-spacing: var(--letterSpacing);
-}
-.coffee-info span {
-  display: block;
-}
-.coffee-info a {
-  color: var(--primary-500);
 }
 
 .section-title {
@@ -371,6 +330,9 @@ ul {
   margin: 5rem auto;
 }
 .container {
+  width: var(--fluid-width);
+  max-width: var(--max-width);
+  margin: 0 auto;
   display: grid;
   gap: 2rem;
   margin-bottom: 4rem;
@@ -432,20 +394,4 @@ ul {
   cursor: pointer;
 }
 
-.mt {
-  margin-top: 1.5rem;
-}
 
-@media screen and (min-width: 992px) {
-  .coffee-info {
-    text-align: left;
-  }
-  .coffee-info span {
-    display: inline-block;
-    margin-right: 0.5rem;
-  }
-}
-
-.Toastify__toast {
-  text-transform: capitalize;
-}
