--- a/src/index.css
+++ b/src/index.css
@@ -430,6 +430,12 @@ Modal
   display: grid;
   place-items: center;
   position: relative;
+  border: solid .3rem var(--clr-red-dark);
+}
+
+.modal-container h2 {
+  color: var(--clr-red-dark);
+  margin-bottom: 1rem;
 }
 
 .modal-container h3 {
